# shosai

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yml  release.yml
assets/: index-C-qiOb-e.js  index-qB2B7KjO.css
core/: Cargo.toml
core/src/: batch.rs  db.rs  exif_read.rs  hash.rs  lib.rs  scan.rs  score.rs  thumb.rs  volume.rs
src/: App.css  App.tsx  backend.ts  demoBackend.ts  pdf.ts  webBackend.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
